2024-06-16_gpe_openshift/manifests/counter-manifests/frontend_ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
spec:
  ingressClassName: openshift-default
  tls:
    - hosts:
        - gpe.sikademo.com
      secretName: letsencrypt
  rules:
  - host: gpe.sikademo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
