2024-06-16_gpe_openshift/manifests/counter-manifests/backend_netpol.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector:
    matchLabels:
      app: backend
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: redis
    - ports:
        - protocol: UDP
          port: 53
    - ports:
        - protocol: TCP
          port: 53
