2024-06-16_gpe_openshift/manifests/counter-manifests/redis_netpol.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector:
    matchLabels:
      app: redis
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: backend
